<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".exercise2">

    <TextView
        android:id="@+id/tv_userInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="1+2+3+4"
        android:textAlignment="textEnd"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_userResult"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/_10_5_5_6"
        android:textSize="50sp"
        android:textAlignment="textEnd"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/button1"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button2"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button3"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_9" />

            <Button
                android:id="@+id/button4"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_suma" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/button5"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button6"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button7"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button8"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_resta" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/button9"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button10"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button11"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_3" />

            <Button
                android:id="@+id/button12"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_multi" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button

                android:id="@+id/button15"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_borrar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button16"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button13"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_igual" />

            <Button
                android:id="@+id/button14"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_division" />
        </TableRow>
    </TableLayout>



</LinearLayout>