<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="30dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/btnEjercicio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejercicio_1"
            android:onClick="redirectExercise1"/>

    <Button
        android:id="@+id/btnEjercicio2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio_2"
        android:onClick="redirectExercise2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:text="@string/integrantes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </LinearLayout>

</LinearLayout>